--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flutuar viagens</title>
+  <link rel="icon" type="image/x-icon" href="images/Favicon.png">
   <link
     href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;700&family=Inter:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
     rel="stylesheet">
